--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,201 @@
 :root {
     --text-color: #373737;
-    --dark-green: #314C3F;
-    --medium-green: #8E9685;
-    --light-green: #C6CAC3;
-    --medium-beige: #D4B6AA;
-    --light-beige: #F8F7F6;
-    --light-brown: #D5CCC2;
+    --beige: #FAF3DD;
+    --light-green: #C8D5B9;
+    --light-blue: #8FC0A9;
+    --blue: #68B0AB;
+    --dark-green: #4A7C59;
 }
 
-html {
-    scroll-behavior: smooth;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    max-width: 100vw;
-    overflow-x: hidden;
+    background-color: #fffefb;
+    color: var(--text-color);
+}
+
+p,
+h2,
+a {
+    font-family: 'Jost', sans-serif;
+}
+
+h1,
+h3 {
+    font-family: 'Abril Fatface', cursive;
+}
+
+h2 {
+    color: var(--dark-green);
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+nav {
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 10vh;
+    padding: 15px;
+    background-color: #ffffff00;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo {
+    margin-left: 20px;
+}
+
+.toggle {
+    display: none;
+}
+
+.menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+    width: 550px;
+}
+
+.menu li a {
+    color: var(--text-color);
+    text-decoration: none;
+}
+
+.menu li {
+    transition-duration: 1s;
+}
+
+.menu li:hover {
+    font-weight: bolder;
+    transform: scale(1.2);
+    transition-duration: .4s;
+}
+
+.btn {
+    border: 0;
+    background: var(--light-green);
+    font-size: 1rem;
+    padding: 0.5rem 1rem;
+    border-radius: 20px;
+    font-family: 'Jost', sans-serif;
+}
+
+.btn.btn-secondary {
+    background: transparent;
+    border: 2px solid var(--light-green);
+}
+
+
+/*Header*/
+
+header {
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+    height: 100vh;
+    padding: 8%;
+    background-image: url("../images/blob-haikei.svg");
+    background-size: cover;
+}
+
+header>div>h1 {
+    font-size: 5em;
+}
+
+header>div {
+    margin: auto;
+    text-align: right;
+}
+
+
+/*Partie téléchargement de l'application*/
+
+#application {
+    margin: 0 15vw 0 15vw;
+    background-color: var(--light-green);
+    padding: 50px 30px 0 30px;
+    border-radius: 20px 0 0 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+#application>div {
+    align-self: center;
+}
+
+.download-boutons {
+    display: flex;
+    padding: 20px;
+    justify-content: space-evenly;
+}
+
+.download-boutons>img {
+    max-width: 40%;
+}
+
+#application>img {
+    max-width: 50%;
+    justify-self: center;
+    align-self: end;
+}
+
+@media all and (max-width: 991px) {
+    header {
+        background: transparent;
+    }
+    .toggle {
+        display: block;
+        font-size: 2rem;
+        cursor: pointer;
+        position: relative;
+        z-index: 20;
+    }
+    .logo {
+        position: relative;
+        z-index: 20;
+    }
+    .ouvrir {
+        display: block;
+    }
+    .fermer {
+        display: none;
+    }
+    .open .ouvrir {
+        display: none;
+    }
+    .open .fermer {
+        display: block;
+    }
+    .menu {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background: #000;
+        flex-direction: column;
+        padding: 2rem;
+        justify-content: space-around;
+        transform: translateX(-100%);
+        transition: transform 1s;
+    }
+    .menu li a {
+        font-size: 2rem;
+    }
+    .btn {
+        font-size: 2rem;
+    }
+    .open .menu {
+        transform: translateX(0);
+    }
 }
