--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,8 @@ a {
 }
 
 h1,
-h3 {
+h3,
+h4 {
     font-family: 'Abril Fatface', cursive;
 }
 
@@ -79,6 +80,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     width: 550px;
+    padding-right: 15px;
 }
 
 nav li a {
@@ -128,6 +130,12 @@ footer>* {
     background-color: var(--dark-green);
 }
 
+footer>nav {
+    z-index: 1;
+    position: unset;
+    height: auto;
+}
+
 footer>nav>ul>li {
     margin-right: 20px;
 }
@@ -165,7 +173,7 @@ footer>nav>ul>li>a {
     .open-close {
         display: unset;
         position: absolute;
-        right: 0;
+        right: 15px;
         height: 70%;
     }
     .logo {
