--- a/css/plantesStyle.css
+++ b/css/plantesStyle.css
@@ -19,7 +19,7 @@ p {
 }
 
 header {
-    background-image: url("/images/Plantes/celling-plant.png");
+    background-image: url("../images/Plantes/plante-plafond.png");
     background-repeat: repeat-x;
     background-position: center top;
     background-size: contain;
@@ -35,7 +35,10 @@ header>h1 {
     padding: 7px;
 }
 
-.plantsGallery {
+
+/*Partie Gallerie des plantes*/
+
+.galleriePlantes {
     display: flex;
     gap: 30px;
     justify-content: center;
@@ -44,7 +47,7 @@ header>h1 {
     overflow: auto;
 }
 
-.plantCard {
+.cartePlante {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -53,12 +56,12 @@ header>h1 {
     transition-duration: 1.5s;
 }
 
-.plantCard:hover {
+.cartePlante:hover {
     transform: scale(1.1);
     transition-duration: 0.4s;
 }
 
-.plantCard>.pictoPlante {
+.cartePlante>.pictoPlante {
     position: absolute;
     top: 23%;
 }
@@ -71,18 +74,18 @@ header>h1 {
     right: 5%;
 }
 
-.plantCard>.illuPlante {
+.cartePlante>.illuPlante {
     margin-bottom: 50px;
     max-width: 90%;
     margin: auto;
 }
 
-.plantCard>div {
+.cartePlante>div {
     padding-top: 300%;
     padding: 10px;
 }
 
-.plantCard>.cardFond {
+.cartePlante>.fondCarte {
     position: absolute;
     top: 20%;
     bottom: 0;
@@ -93,21 +96,19 @@ header>h1 {
     box-shadow: 0 .1rem 1rem rgba(0, 0, 0, 0.1);
 }
 
-#mesPlantes .cardFond {
+#mesPlantes .fondCarte {
     background-color: var(--light-blue);
 }
 
 
-/* .cardFond {
-    border: 4px solid var(--light-blue);
-} */
+/*Partie Responsive page plantes*/
 
 @media only screen and (max-width: 768px) {
-    .plantsGallery {
+    .galleriePlantes {
         justify-content: initial;
         padding: 3vh;
     }
-    .plantCard {
+    .cartePlante {
         min-width: 35vw;
     }
 }
